--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.4",
     "react": "^18.2.0",
+    "react-awesome-reveal": "^4.0.1",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "react-reveal": "^1.2.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
