--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
+    "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.0.1",
     "react-dom": "^18.2.0",
