--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
+    "@phosphor-icons/react": "^2.0.8",
+    "@types/styled-components": "^5.1.26",
     "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.0.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-reveal": "^1.2.2",
-    "react-router-dom": "^6.8.0"
+    "react-router-dom": "^6.8.0",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
