--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@phosphor-icons/react": "^2.0.8",
     "@types/styled-components": "^5.1.26",
     "axios": "^0.27.2",
+    "emailjs": "^4.0.3",
+    "emailjs-com": "^3.2.0",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.0.1",
     "react-dom": "^18.2.0",
